2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c, src/useraddd.c: Fix the usage string so that it
	does not change depending on the configure option. Use a format.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Fix the usage of the unused macro.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/age.c, src/expiry.c, src/login.c: A
	shadow entry is now sufficient for agecheck. Remove the first
	passwd entry parameter.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/usermod.c: Only call selinux_update_mapping()
	if Zflg is set.
	* src/userdel.c: Rename argv to args to avoid nameclash with the
	main() parameters.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getgr_nam_gid.c: Added support for NULL argument.
	* libmisc/chowntty.c: Reuse getgr_nam_gid(), and get rid of atol().

2009-04-11  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: For system
	accounts, return the first unused ID, starting from the max value.
	This could be useful later to increase the static IDs range.

2009-04-11  Peter Vrabec  <pvrabec@redhat.com>

	* NEWS, src/useradd.c, man/useradd.8.xml: add -Z option to map
	SELinux user for user's login.
	* NEWS, src/usermod.c, man/usermod.8.xml: Likewise.
	* libmisc/system.c, libmisc/Makefile.am, lib/prototypes.h: Added
	safe_system(). Used to run semanage.
	* lib/prototypes.h, libmisc/copydir.c: Make a
	selinux_file_context() an extern function.
	* libmisc/copydir.c: Reset SELinux to create files with default
	contexts at the end of copy_tree().
	* NEWS, src/userdel.c: Delete the SELinux user mapping for user's
	login.

2009-04-11  Peter Vrabec  <pvrabec@redhat.com>

	* src/useradd.c (get_defaults): Close the default file after the
	default values were read.

2009-04-11  Christian Perrier  <bubulle@debian.org>
