@@ -1,13 +1,17 @@
 
 mandir = @mandir@/es
 
-man_MANS = \
-	login.1 \
-	newgrp.1 \
-	passwd.1 \
-	passwd.5 \
-	su.1 \
-	vigr.8 \
-	vipw.8
+man_MANS = 
+
+# These Spanish manpages are outdated.
+# Please contact pkg-shadow-devel@lists.alioth.debian.org if you wish to
+# provide updates.
+#	login.1 \
+#	newgrp.1 \
+#	passwd.1 \
+#	passwd.5 \
+#	su.1 \
+#	vigr.8 \
+#	vipw.8
 
 EXTRA_DIST = $(man_MANS)
