@@ -36,6 +36,9 @@ shadow-4.1.2.2 -> shadow-4.1.3						UNRELEASED
     default.
 - Translations
   * New Kazakh translation.
+  * Spanish manpages are no more distributed. They are outdated. Please
+    contact pkg-shadow-devel@lists.alioth.debian.org if you wish to
+    provide updates.
 
 - faillog
   * Accept users specified as a numerical UID, or ranges of users (-user,
