@@ -1,5 +1,12 @@
 2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* man/es/Makefile.am: Disable the distribution of Spanish
+	manpages. They are outdated. Please contact
+	pkg-shadow-devel@lists.alioth.debian.org if you wish to provide
+	updates.
+
+2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/usermod.c, src/useraddd.c: Fix the usage string so that it
 	does not change depending on the configure option. Use a format.
 
